@@ -1,3 +1,7 @@
+2013-01-07  Roland McGrath  <roland@hack.frob.com>
+
+	* run-prelink-addr-test.sh: Use ln -snf.
+
 2012-12-03  Mark Wielaard  <mjw@redhat.com>
 
 	* Makefile.am (valgrind_cmd): Add --run-libc-freeres=no.
